--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        <h1>This is jy Github page website!
+        <h1>This is Github page website!
     </body>
 </html>
